deploy/retrieveUnpackaged/objects/LDT_Follow_Up__c.object
<CustomObject>
    <description>used to track the activities for nurture opportunities by LDT.</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>LDT Follow Ups</relationshipLabel>
        <relationshipName>LDT_Follow_Ups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>owner of the LDT Follow up object</description>
        <inlineHelpText>This should be the LDT rep that is nurturing the opportunity.</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LDT_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>status of the LDT Follow Up</description>
        <inlineHelpText>Please select the status of the follow up process.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LDT Follow Up</label>
    <nameField>
        <label>LDT Follow Up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDT Follow Ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>